# arm_robot_jl_ros

./: CMakeLists.txt  Project.toml  README.md  package.xml  requirements.txt
launch/: sample.launch
scripts/: precompile_julia.sh
src/: arm_robot.jl  simple_controller.jl  simple_simulator.jl
