<?xml version="1.0"?>
<package format="2">
  <name>arm_robot_jl_ros</name>
  <version>0.0.1</version>
  <description>arm_robot_jl ROS package with Julia and virtualenv support</description>

  <maintainer email="tsubaki@jsk.t.u-tokyo.ac.jp">Michitoshi Tsubaki</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>catkin_virtualenv</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>catkin_virtualenv</exec_depend>
  <exec_depend>nextage_description</exec_depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
